@@ -13,6 +13,7 @@
                 {% csrf_token %}
                 {{ edit_handler.render_form_content }}
                 <footer role="contentinfo">
+                    <nav aria-label="{% trans 'Actions' %}">
                     <ul>
                         <li class="actions">
                             <div class="dropdown dropup dropdown-button match-width">
@@ -20,12 +21,13 @@
                                     <span class="icon icon-spinner"></span><em>{% trans 'Save' %}</em>
                                 </button>
                                 <div class="dropdown-toggle icon icon-arrow-up"></div>
-                                <ul role="menu">
+                                <ul>
                                     <li><a href="{% url 'wagtailsnippets:delete' model_opts.app_label model_opts.model_name instance.pk|admin_urlquote %}" class="shortcut">{% trans "Delete" %}</a></li>
                                 </ul>
                             </div>
                         </li>
                     </ul>
+                    </nav>
                 </footer>
             </form>
         </div>
